2009-04-28  John Dallaway  <john@dallaway.org.uk>

	cdl/ramfs.cdl: Use CYGPKG_IO_FILEIO as the parent.

2008-04-02  Xinghua Yang <yxinghua@sunnorth.com.cn>
            Taiyun  Wang <taiyun@sunnorth.com.cn>
	
	* cdl/ramfs.cdl: Use CYGPKG_FS_RAM_RET_DIRENT_DTYPE to control
	whether ram sets file type in ramfs_fo_dirread.
	* src/ramfs.c: Set file type in ramfs_fo_dirread.
	* tests/ramfs1.c: Test the new d_type in dirent when present.
	
2006-10-05  Andrew Lunn  <andrew.lunn@ascom.ch
	    Paluch Sebastian <the_sorcerer&op.pl>
	
	* test/ramfs3 (new): Test for lseek bug found in fileio.
	* cdl/ramfs.cdl: Build new test.
	
2006-06-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ramfs.c (find_direntry): Don't search off the end of the
	directory node into hyperspace.
	* src/ramfs.c (ramfs_getinfo): Support for block usage call.
	* tests/ramfs1.c (main): Add file system block usage test. 

2006-05-17  Andy Jackson  <andy@grapevinetech.co.uk>

	* tests/ramfs1.c (createfile): Fix compile warnings.

2005-10-01  Andrew Lunn   <andrew.lunn@ascom.ch>

	* src/ramfs.c: Implement holes in files when using BLOCK
	allocation method. This requires allowing lseek to go past the end
	of the file.

	* test/ramfs2.c: Extended the lseek test to now seek past the end
	of the file. With the BLOCK allocation method this will create a
	whole. With the SIMPLE allocation method is just allocates the
	memory and fills it with zero.

	* cdl/ramfs.cdl: Added in interface which both SIMPLE and BLOCK
	implement. This allows the inference engine to work out is should
	enable BLOCK if SIMPLE is disabled by the user.

2005-10-01  Dan Jakubiec  <dan.jakubiec@systech.com>

	* src/ramfs.c: (ramfs_mount, ramfs_open, ramfs_mkdir) Changed the
	permissions for files and directories created on RAMFS file systems
	from 000 to 777. This helps ported applications which wrongly
	assume there is some security concept and check for the existence
	of certain file permissions.
